--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.10)
 
 # Add all module subdirectories
 add_subdirectory(module_1)
-add_subdirectory(module_2)
+add_subdirectory(csv_handler)
 add_subdirectory(xml_handler)
